--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cafe Menu</title>
+    <title>Welcome!</title>
     <link href="styles.css" rel="stylesheet"/>
   </head>
   <body>
     <div class="menu">
       <header>
-        <h1>CAMPER CAFE</h1>
-        <p class="established">Est. 2020</p>
+        <h1>Things we can do for You!</h1>
+        <p class="established">Anas. 2022</p>
       </header>
       <hr>
       <main>
         <section>
-          <h2>Coffee</h2>
+          <h2>Web development!</h2>
           <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon"/>
           <article class="item">
-            <p class="flavor">French Vanilla</p><p class="price">3.00</p>
+            <p class="flavor">Front End Dev</p><p class="price">1000$</p>
           </article>
           <article class="item">
-            <p class="flavor">Caramel Macchiato</p><p class="price">3.75</p>
+            <p class="flavor">Back End</p><p class="price">1200$</p>
           </article>
           <article class="item">
             <p class="flavor">Pumpkin Spice</p><p class="price">3.50</p>
